--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.5.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.0",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
