--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "chart.js": "^4.5.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
